--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "date-fns": "^3.6.0",
     "inngest": "^3.27.4",
     "lucide-react": "^0.462.0",
-    "next": "15.0.3",
+    "next": "^15.1.6",
     "next-themes": "^0.4.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-day-picker": "^8.10.1",
